package drinkshop.repository;

import drinkshop.domain.Order;

public interface OrderRepository extends Repository<Integer, Order> {
}
