package drinkshop.repository;

import drinkshop.domain.Product;

public interface ProductRepository extends Repository<Integer, Product>{
}
