package drinkshop.repository;

import drinkshop.domain.Reteta;

public interface RetetaRepository extends Repository<Integer, Reteta> {
}
