package drinkshop.repository;

import drinkshop.domain.Stoc;

public interface StocRepository extends Repository<Integer, Stoc> {
}
