package drinkshop.repository.file;

import drinkshop.domain.Stoc;
import drinkshop.repository.StocRepository;

public class FileStocRepository
        extends FileAbstractRepository<Integer, Stoc> implements StocRepository {

    public FileStocRepository(String fileName) {
        super(fileName);
        loadFromFile();
    }

    @Override
    protected Integer getId(Stoc entity) {
        return entity.getId();
    }

    @Override
    protected Stoc extractEntity(String line) {
        String[] elems = line.split(";");

        int id = Integer.parseInt(elems[0]);
        String ingredient = elems[1];
        int cantitate = Integer.parseInt(elems[2]);
        int stocMinim = Integer.parseInt(elems[3]);

        return new Stoc(id, ingredient, cantitate, stocMinim);
    }

    @Override
    protected String createEntityAsString(Stoc entity) {
        return entity.getId() + ";" +
                entity.getIngredient() + ";" +
                entity.getCantitate() + ";" +
                entity.getStocMinim();
    }
}